--- a/desafio_pickpay/docker-compose.yml
+++ b/desafio_pickpay/docker-compose.yml
@@ -1,7 +1,11 @@
+networks:
+  default:
+    driver: bridge
+
 services:
   db:
     container_name: pickpay-challenge
-    image: mysql:8.1
+    image: mysql:latest
     restart: always
     command:
       - --mysql-native-password=ON
@@ -15,7 +19,40 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
     ports:
-      - ${DB_PORT}:3306
+      - 5433:3306
+#      - ${DB_PORT:5433}:3306
+
+  broker:
+    image: apache/kafka:latest
+    hostname: broker
+    container_name: broker
+    environment:
+      KAFKA_NODE_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://broker:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092 # Aqui devemos inserir o host do produtor. Neste caso nosso producer ta no localhost enviando para o container que está configurado como broker
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@broker:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_NUM_PARTITIONS: 3 # Numero de partições
+
+    ports:
+      - 9092:9092
+    volumes:
+      - kafka_data:/var/run/docker.sock:/var/run/docker.sock
+
+  zookeeper:
+    image: zookeeper:latest
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
 
 volumes:
   mysql_data:
+  kafka_data:
