--- a/desafio_pickpay/src/main/resources/application.properties
+++ b/desafio_pickpay/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=desafio_pickpay
 spring.datasource.url=jdbc:mysql://localhost:5433/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 server.error.include-stacktrace = never
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
